# askama

./: .gitattributes  .readthedocs.yaml  Cargo.toml  _typos.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
askama/: Cargo.toml
askama/src/: helpers.rs  lib.rs
askama/src/filters/: alloc.rs  builtin.rs  core.rs  default.rs  escape.rs  humansize.rs  indent.rs  json.rs  mod.rs  std.rs  urlencode.rs
askama_derive/: Cargo.toml
askama_derive/src/: config.rs  filter_fn.rs  generator.rs  heritage.rs  input.rs  integration.rs  lib.rs  macros.rs  tests.rs
askama_derive/src/generator/: expr.rs  filter.rs  node.rs
askama_derive/src/generator/helpers/: macro_invocation.rs  mod.rs  paths.rs
askama_derive_standalone/: Cargo.toml  empty_test_config.toml
askama_derive_standalone/benches/: derive-template.rs
askama_escape/: Cargo.toml  README.md
askama_escape/benches/: all.rs  strings.inc
askama_escape/src/: lib.rs
askama_macros/: Cargo.toml  README.md
askama_macros/src/: filter_fn.rs  helpers.rs  lib.rs
askama_parser/: Cargo.toml
askama_parser/src/: expr.rs  lib.rs  memchr_splitter.rs  node.rs  target.rs  tests.rs
bench-build/: Cargo.toml  README.md
bench-build/src/: main.rs
book/: update-theme.py
book/src/: creating_templates.md  features.md  filters.md  frameworks.md  introduction.md  performance.md  runtime.md  template_syntax.md  upgrading.md
book/theme/: highlight.js
examples/actix-web-app/: Cargo.toml
examples/actix-web-app/templates/: greet.html  index.html
examples/axum-app/: Cargo.toml
examples/poem-app/: Cargo.toml
examples/rocket-app/: Cargo.toml
examples/rocket-app/src/: main.rs
examples/salvo-app/: Cargo.toml
examples/warp-app/: Cargo.toml
examples/warp-app/templates/: greet.html  index.html
fuzzing/fuzz/: Cargo.toml
fuzzing/fuzz/artifacts/derive/: clusterfuzz-testcase-minimized-derive-4793932351602688  clusterfuzz-testcase-minimized-derive-4955521990066176  clusterfuzz-testcase-minimized-derive-5064777150038016  clusterfuzz-testcase-minimized-derive-5107711304073216  clusterfuzz-testcase-minimized-derive-5353647120908288  clusterfuzz-testcase-minimized-derive-5387873899839488  clusterfuzz-testcase-minimized-derive-5611392537526272  clusterfuzz-testcase-minimized-derive-5780292277436416  clusterfuzz-testcase-minimized-derive-6051930453639168  clusterfuzz-testcase-minimized-derive-6236623325167616  clusterfuzz-testcase-minimized-derive-6503980895371264  clusterfuzz-testcase-minimized-derive-6542584430526464  clusterfuzz-testcase-minimized-derive-6573215117017088  clusterfuzz-testcase-minimized-derive-6617490908315648  clusterfuzz-testcase-minimized-derive-6639137261420544
fuzzing/fuzz/artifacts/filters/: minimized-from-b44b4bd1da1759dee0924a8586a6001e80da76fa
fuzzing/fuzz/fuzz_targets/: derive.rs
fuzzing/fuzz/src/: all.rs  derive.rs  filters.rs  lib.rs
fuzzing/fuzz/src/html/: mod.rs
testing/: Cargo.toml
testing-alloc/: Cargo.toml
testing-no-std/: Cargo.toml
testing-renamed/: Cargo.toml
testing/benches/: all.rs  normalize_identifier.rs
testing/templates/: deep-base.html  deep-import-child.html  deep-import-parent.html  deep-kid.html  deep-mid.html  deep-nested-macro.html  fragment-mid-super.html  fragment-nested-super.html  fragment-super.html  fuzzed-recursion-mul-deref.txt  if-coerce.html  import.html  included-macro.html  macro-call-raw-string-many-hashes.html  macro-import-callexpr.html  macro-import-str-cmp-macro.html  macro-import-str-cmp.html  macro-no-args.html  macro-recursion-1.html  macro-recursion-2.html  macro-recursion-3.html  macro-self-arg.html  macro-short-circuit.html  macro-with-caller.html  macro.html  nested-macro-args.html  nested-macro-callexpr.html  nested-macro.html  size-child-super.txt
testing/tests/: blocks.rs  book-examples.rs  book_example_performance_fmt_call_fast_writable.rs  book_example_runtime_values_in_custom_filters.rs  calls.rs  cow_str_implements_fast_writable.rs  default.rs  extend.rs  filter_block.rs  filters.rs  hello.rs  let.rs  literal.rs  loops.rs  macro.rs  matches.rs  named_filter_arguments.rs  path.rs  reexported-askama.rs  ui.rs  values.rs  vars.rs
testing/tests/ui/: askama-block.stderr  assign-to-askama.rs  assign-to-askama.stderr  broken-config.stderr  caller_arguments.rs  caller_arguments.stderr  char_literal.rs  char_literal.stderr  character_literal-multiple-chars.rs  character_literal-multiple-chars.stderr  comments-in-macro-calls.rs  comments-in-macro-calls.stderr  comparator-chaining.rs  comparator-chaining.stderr  crate_identifier.rs  crate_identifier.stderr  custom-filter-with-named-arg.rs  custom-filter-with-named-arg.stderr  cycle.stderr  cycle2.stderr  default.rs  default.stderr  error_file_path.stderr  expr_fn_calls.rs  expr_fn_calls.stderr  filter-invocation-invalid-arguments.rs  filter-invocation-invalid-arguments.stderr  filter-recursion.stderr  filter-signature-validation.rs  filter-signature-validation.stderr  fuzzed_recursion_depth_mul_deref.stderr  fuzzing.rs  fuzzing.stderr  groups.rs  groups.stderr  illegal-string-literals.rs  illegal-string-literals.stderr  incorrect_path.stderr  json-too-many-args.stderr  loop-fields.rs  (+35 more)
