[package]
name = "askama_escape"
version = "0.13.0"
description = "HTML escaping, extracted from Askama"
keywords = ["html", "escaping"]
categories = ["no-std", "no-std::no-alloc"]
homepage = "https://askama.readthedocs.io/"
repository = "https://github.com/askama-rs/askama"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.88"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[[bench]]
name = "all"
harness = false

[dev-dependencies]
criterion = "0.7"
