[package]
name = "bench-build"
version = "0.14.0"
authors = ["askama-rs developers"]
edition = "2021"
rust-version = "1.83"
publish = false

[dependencies]
askama = { path = "../askama", version = "0.14.0", default-features = false, features = ["std"] }
askama_macros = { path = "../askama_macros", version = "0.14.0", features = ["std"] }

[features]
default = []
derive = ["askama/derive"]

[workspace]
members = ["."]
