[package]
name = "askama_testing-alloc"
version = "0.13.0"
authors = ["askama-rs developers"]
edition = "2021"
rust-version = "1.83"
publish = false

[dev-dependencies]
askama = { path = "../askama", version = "0.13.0", default-features = false, features = ["alloc", "derive"] }

assert_matches = "1.5.0"
