[package]
name = "askama_testing-alloc"
version = "0.14.0"
authors = ["askama-rs developers"]
edition = "2024"
rust-version = "1.88"
publish = false

[dev-dependencies]
askama = { path = "../askama", version = "0.14.0", default-features = false, features = ["alloc", "derive"] }

assert_matches = "1.5.0"
