[package]
name = "askama_testing-renamed"
version = "0.13.0"
authors = ["askama-rs developers"]
edition = "2021"
rust-version = "1.83"
publish = false

[dev-dependencies]
some_name = { package = "askama", path = "../askama", version = "0.13.0", default-features = false, features = ["derive"] }

assert_matches = "1.5.0"
